tests/invalid/variable_no_type_no_initializer.ar
fn main() {
    const a;
}

//! tests/invalid/variable_no_type_no_initializer.ar:2:11: error: no type annotations provided
